// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client is falsy 1`] = `""`;

exports[`deleteable is true 1`] = `
<div
  className="layout-row layout-align-center-center tile_padding tile_wrapper flex-xs-100 flex-sm-50 flex-md-50 flex-lg-33"
  onClick={[Function]}
>
  <GradientBorder
    className="flex-100"
    content={
      <div
        className="flex-100"
        onClick={[Function]}
      >
        <div
          className="flex-none layout-row layout-align-center-center delete_x"
          onClick={[Function]}
        >
          <i
            className="fa fa-trash"
          />
        </div>
        <div
          className="content flex-100 layout-row layout-align-center-start"
          data-for="RANDOM_KEY_2"
          data-tip=""
        >
          <div
            className="
        margin flex-80 layout-row layout-wrap layout-align-center-center"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-user clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <h4
                className="flex-90 flex-offset-10 no_m"
              >
                 
                Sebastian
                 
                Muller
                 
              </h4>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader border_divider"
            >
              <i
                className="flex-none fa fa-envelope clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Email
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center client_text"
            >
              <p
                className="flex-90 flex-offset-10"
              >
                muller55@yahoo.de
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-building clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Company
              </p>
            </div>
            <div
              className="
            flex-100 layout-row layout-align-start-center-center client_text
          "
            >
              <p
                className="flex-90 flex-offset-10"
              >
                Mehristweniger
              </p>
            </div>
          </div>
          
        </div>
      </div>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex client_card layout-row pointy"
  />
</div>
`;

exports[`shallow render 1`] = `
<div
  className="layout-row layout-align-center-center tile_padding tile_wrapper flex-xs-100 flex-sm-50 flex-md-50 flex-lg-33"
  onClick={[Function]}
>
  <GradientBorder
    className="flex-100"
    content={
      <div
        className="flex-100"
        onClick={[Function]}
      >
        
        <div
          className="content flex-100 layout-row layout-align-center-start"
          data-for="RANDOM_KEY_0"
          data-tip=""
        >
          <div
            className="
        margin flex-80 layout-row layout-wrap layout-align-center-center"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-user clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <h4
                className="flex-90 flex-offset-10 no_m"
              >
                 
                Sebastian
                 
                Muller
                 
              </h4>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader border_divider"
            >
              <i
                className="flex-none fa fa-envelope clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Email
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center client_text"
            >
              <p
                className="flex-90 flex-offset-10"
              >
                muller55@yahoo.de
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-building clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Company
              </p>
            </div>
            <div
              className="
            flex-100 layout-row layout-align-start-center-center client_text
          "
            >
              <p
                className="flex-90 flex-offset-10"
              >
                Mehristweniger
              </p>
            </div>
          </div>
          
        </div>
      </div>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex client_card layout-row pointy"
  />
</div>
`;

exports[`showTooltip is true 1`] = `
<div
  className="layout-row layout-align-center-center tile_padding tile_wrapper flex-xs-100 flex-sm-50 flex-md-50 flex-lg-33"
  onClick={[Function]}
>
  <GradientBorder
    className="flex-100"
    content={
      <div
        className="flex-100"
        onClick={[Function]}
      >
        
        <div
          className="content flex-100 layout-row layout-align-center-start"
          data-for="RANDOM_KEY_3"
          data-tip=""
        >
          <div
            className="
        margin flex-80 layout-row layout-wrap layout-align-center-center"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-user clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <h4
                className="flex-90 flex-offset-10 no_m"
              >
                 
                Sebastian
                 
                Muller
                 
              </h4>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader border_divider"
            >
              <i
                className="flex-none fa fa-envelope clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Email
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center client_text"
            >
              <p
                className="flex-90 flex-offset-10"
              >
                muller55@yahoo.de
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-building clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Company
              </p>
            </div>
            <div
              className="
            flex-100 layout-row layout-align-start-center-center client_text
          "
            >
              <p
                className="flex-90 flex-offset-10"
              >
                Mehristweniger
              </p>
            </div>
          </div>
          <ReactTooltip
            className="tooltip"
            effect="solid"
            id="RANDOM_KEY_3"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </div>
      </div>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex client_card layout-row pointy"
  />
</div>
`;

exports[`state.showDelete is true 1`] = `
<div
  className="layout-row layout-align-center-center tile_padding tile_wrapper flex-xs-100 flex-sm-50 flex-md-50 flex-lg-33"
  onClick={[Function]}
>
  <GradientBorder
    className="flex-100"
    content={
      <div
        className="flex-100"
        onClick={[Function]}
      >
        
        <div
          className="content flex-100 layout-row layout-align-center-start"
          data-for="RANDOM_KEY_5"
          data-tip=""
        >
          <div
            className="
        margin flex-80 layout-row layout-wrap layout-align-center-center"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-user clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <h4
                className="flex-90 flex-offset-10 no_m"
              >
                 
                Sebastian
                 
                Muller
                 
              </h4>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader border_divider"
            >
              <i
                className="flex-none fa fa-envelope clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Email
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center client_text"
            >
              <p
                className="flex-90 flex-offset-10"
              >
                muller55@yahoo.de
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-building clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Company
              </p>
            </div>
            <div
              className="
            flex-100 layout-row layout-align-start-center-center client_text
          "
            >
              <p
                className="flex-90 flex-offset-10"
              >
                Mehristweniger
              </p>
            </div>
          </div>
          
        </div>
      </div>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex client_card layout-row pointy"
  />
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="layout-row layout-align-center-center tile_padding tile_wrapper flex-xs-100 flex-sm-50 flex-md-50 flex-lg-33"
  onClick={[Function]}
>
  <GradientBorder
    className="flex-100"
    content={
      <div
        className="flex-100"
        onClick={[Function]}
      >
        
        <div
          className="content flex-100 layout-row layout-align-center-start"
          data-for="RANDOM_KEY_1"
          data-tip=""
        >
          <div
            className="
        margin flex-80 layout-row layout-wrap layout-align-center-center"
            onClick={[Function]}
          >
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-user clip"
                style={
                  Object {
                    "color": "black",
                  }
                }
              />
              <h4
                className="flex-90 flex-offset-10 no_m"
              >
                 
                Sebastian
                 
                Muller
                 
              </h4>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader border_divider"
            >
              <i
                className="flex-none fa fa-envelope clip"
                style={
                  Object {
                    "color": "black",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Email
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center client_text"
            >
              <p
                className="flex-90 flex-offset-10"
              >
                muller55@yahoo.de
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-space-around-center-center client_subheader"
            >
              <i
                className="flex-none fa fa-building clip"
                style={
                  Object {
                    "color": "black",
                  }
                }
              />
              <p
                className="flex-90"
              >
                Company
              </p>
            </div>
            <div
              className="
            flex-100 layout-row layout-align-start-center-center client_text
          "
            >
              <p
                className="flex-90 flex-offset-10"
              >
                Mehristweniger
              </p>
            </div>
          </div>
          
        </div>
      </div>
    }
    gradient={
      Object {
        "background": "black",
      }
    }
    wrapperClassName="flex client_card layout-row pointy"
  />
</div>
`;
